--- a/.github/workflows/gitactions-pipeline.yml
+++ b/.github/workflows/gitactions-pipeline.yml
@@ -61,7 +61,7 @@ jobs:
           # k8s/helm/values.yaml 파일의 tag: "..." 부분을 찾아 현재 빌드 번호로 변경
           sed -i 's/tag: ".*"/tag: "${{ github.run_number }}"/g' k8s/helm/Values.yaml
           # 변경 내용 확인
-          cat k8s/helm/values.yaml
+          cat k8s/helm/Values.yaml
 
       # 7. 수정된 매니페스트를 다시 GitHub Push
       - name: Commit and Push Manifest changes
