--- a/.github/workflows/gitactions-pipeline.yml
+++ b/.github/workflows/gitactions-pipeline.yml
@@ -68,6 +68,6 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add k8s/helm/values.yaml
+          git add k8s/helm/Values.yaml
           git commit -m "Update image tag to ${{ github.run_number }}"
           git push
